tests/negative/gold/prefix-assign-test.gold
tests/negative/prefix-assign-test.toit:8:3: error: Can't use prefix 'prefix' as an expression
  prefix = unresolved
  ^~~~~~
tests/negative/prefix-assign-test.toit:8:12: error: Unresolved identifier: 'unresolved'
  prefix = unresolved
           ^~~~~~~~~~
Compilation failed
